Add SqlQuery to Query
